// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <CheckoutSteps /> component correctly 1`] = `
<View>
  <View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 30,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
    <View>
      <View />
      <View />
    </View>
  </View>
  <View>
    <View>
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          2
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Delivery
      </Text>
    </View>
    <View>
      <View />
      <View />
    </View>
  </View>
  <View>
    <View>
      <View
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          3
        </Text>
      </View>
    </View>
    <View>
      <View />
      <View />
    </View>
  </View>
  <View>
    <View>
      <View
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          4
        </Text>
      </View>
    </View>
    <View>
      <View />
      <View />
    </View>
  </View>
</View>
`;

exports[`renders <CheckoutSteps /> with props 1`] = `
<View>
  <View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 30,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
    <View>
      <View />
      <View />
    </View>
  </View>
  <View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 30,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
    <View>
      <View />
      <View />
    </View>
  </View>
  <View>
    <View>
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          3
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Shipping
      </Text>
    </View>
    <View>
      <View />
      <View />
    </View>
  </View>
  <View>
    <View>
      <View
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          4
        </Text>
      </View>
    </View>
    <View>
      <View />
      <View />
    </View>
  </View>
</View>
`;
